--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       'Content-Type': 'application/json'
       // 'Content-Type': 'application/x-www-form-urlencoded',
     }, // *GET, POST, PUT, DELETE, etc.
+    mode: 'no-cors', // no-cors, *cors, same-origin
                 referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
                 body: {email} // body data type must match "Content-Type" header
             })
