--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }, // *GET, POST, PUT, DELETE, etc.
     mode: 'no-cors', // no-cors, *cors, same-origin
                 referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-                body: {email} // body data type must match "Content-Type" header
+                body: JSON.stringify({email}) // body data type must match "Content-Type" header
             })
             
             enviar.innerHTML = "<p>Gracias por querer acompañarme</p>"
